--- a/.github/workflows/model_training.yml
+++ b/.github/workflows/model_training.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/checkout@v2
       with:        
         submodules: recursive
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
