--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "datamodels"]
 	path = datamodels
-	url = https://github.com/tug-cps/datamodels
+	url = https://github.com/tug-cps/datamodels-expansion
 [submodule "feature_engineering/featureengineering"]
 	path = feature_engineering/featureengineering
 	url = https://github.com/tug-cps/featureengineering
