--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Data"]
 	path = Data
 	url = https://github.com/tug-cps/hybridcosim-data
+[submodule "Training/TrainingUtilities/parameters/storage"]
+	path = Training/TrainingUtilities/parameters/storage
+	url = https://github.com/tug-cps/storage
